--- a/content/browserIntegration.mdx
+++ b/content/browserIntegration.mdx
@@ -1,11 +1,11 @@
-# Browser Integration
+# Browser Support
 
 SupaSidebar supports 14 different web browsers with two levels of integration.
 
 ## Integration Levels
 
 ### Basic Integration
-Includes copy URL (⌘⇧C), save page (⌘⇧S) shortcuts, and ability to open links in the browser.
+Includes copy URL (⌘⇧C), save page (⌘⇧S) shortcuts, browser history access, and ability to open links in the browser.
 
 ### Live Tabs
 Real-time browser tab tracking and switching. See [Live Tabs documentation](LIVE_TABS.md) for details.
@@ -36,7 +36,7 @@ Real-time browser tab tracking and switching. See [Live Tabs documentation](LIVE
 
 ## Setup
 
-***To learn about Set Up***  :  [Set Up](SetUp)
+***To learn about Setup***  :  [Installation](/installation)
 ## Learn More
 
 - [Live Tabs Documentation](LIVE_TABS.md) - Detailed guide on the Live Tabs feature
