--- a/content/features/Index.mdx
+++ b/content/features/Index.mdx
@@ -5,126 +5,123 @@ SupaSidebar brings everything you need closer—your apps, tabs, files, shortcut
 
 ## Key Features
 
-### Command Panel  :
+### Command Panel
 Access anything instantly. The Command Panel offers fast, powerful search across apps, files, browser tabs, bookmarks, web queries, and commands with fuzzy search built in. Trigger it globally and jump into tasks without breaking your flow.
 
-***learn more on***  :  [Command Panel](commandPanel)
+[Learn more](commandPanel)
 
 <br/>
 
-### Global Shortcuts  :
-Customize keyboard shortcuts for actions across SupaSidebar.  
+### Global Shortcuts
+Customize keyboard shortcuts for actions across SupaSidebar.
 Launch apps, switch Spaces, open tabs, or trigger commands—all with a keystroke.
 
-***learn more on***  :  [Global Shortcuts](globalShortcuts)
+[Learn more](globalShortcuts)
 
 <br/>
 
 
-### Browser Integration  :
-A unified browsing experience across Safari, Chrome, Brave, Arc, and more.  
+### Browser Integration
+A unified browsing experience across Safari, Chrome, Brave, Arc, and more.
 Browse active tabs, revisit recent ones, set default browsers, and configure search engine preferences from a single interface.
 
-***learn more on***  :  [Browser Integration](browserIntegration)
+[Learn more](/browserIntegration)
 
 <br/>
 
 
-### Browser Selection  :
-Choose where each link opens by setting your preferred browser.  
+### Browser Selection
+Choose where each link opens by setting your preferred browser.
 Enable or disable individual browsers and fine-tune link-opening behavior to match your workflow.
 
-***learn more on***  :  [Browser Selection](browserSelection)
+[Learn more](browserSelection)
 
 <br/>
 
 
-### Floating Button  :
+### Floating Button
 A quick-access floating launcher for essential actions—open the Command Panel, switch Spaces, and access pinned items—always within reach.
 
-***learn more on***  :  [Floating Button](floatinButton)
+[Learn more](floatingButton)
 
 <br/>
 
 
-### Live Tabs  :
-View active tabs across all connected browsers in real time.  
+### Live Tabs
+View active tabs across all connected browsers in real time.
 Search, filter, and switch instantly without juggling windows or tabs.
 
-***learn more on***  :  [Live Tabs](lifeTabs)
+[Learn more](liveTabs)
 
 <br/>
 
 
-### Mouse Triggers  :
-Trigger actions through intuitive mouse gestures.  
+### Mouse Triggers
+Trigger actions through intuitive mouse gestures.
 Open the sidebar, launch the Command Panel, switch Spaces, or run shortcuts using customizable mouse actions.
 
-***learn more on***  :  [Mouse Triggers](mouseTriggers)
+[Learn more](mouseTriggers)
 
 <br/>
 
 
-### Pinned Items  :
-Pin your frequently used apps, files, folders, websites, and shortcuts.  
+### Pinned Items
+Pin your frequently used apps, files, folders, websites, and shortcuts.
 Keep your most important items one click away.
 
-***learn more on***  :  [Pinned Items](pinnedItems)
+[Learn more](pinnedItems)
 
 <br/>
 
 
-### Recent Items  :
-Quickly return to recently opened files, folders, or links.  
+### Recent Items
+Quickly return to recently opened files, folders, or links.
 A streamlined view designed to help you resume work instantly.
 
-***learn more on***  :  [Recent Items](recentItems)
+[Learn more](recentItems)
 
 <br/>
 
 
-### Smart Shortcuts  :
-Create custom shortcuts that combine actions—open apps, run scripts, switch browsers, or launch websites.  
+### Smart Shortcuts
+Create custom shortcuts that combine actions—open apps, run scripts, switch browsers, or launch websites.
 Build workflows that match your unique setup.
 
-***learn more on***  :  [Smart Shortcuts](smartShortcuts)
+[Learn more](smartShortcuts)
 
 <br/>
 
 
-### Smart Folders  :
-Organize your sidebar with dynamic groups that update automatically.  
+### Smart Folders
+Organize your sidebar with dynamic groups that update automatically.
 Group apps, links, or files based on custom rules for a clean, adaptive layout.
 
-***learn more on***  :  [Smart Floders](smartFloders)
+[Learn more](smartFolders)
 
 <br/>
 
 
-### Spaces  :
-Create dedicated workspaces inside SupaSidebar.  
-Switch between Work, Study, Personal, Research, or Custom Spaces.  
+### Spaces
+Create dedicated workspaces inside SupaSidebar.
+Switch between Work, Study, Personal, Research, or Custom Spaces.
 Rename Spaces, set defaults, and tailor each Space to your workflow.
 
-***learn more on***  :  [Spaces](spaces)
+[Learn more](spaces)
 
 <br/>
 
 
-### Finder Integration  :
+### Finder Integration
 Access important folders, frequently used directories, and recent files directly from the sidebar for faster navigation across your Mac.
 
-***learn more on***  :  [Finder Integration](finderIntegration)
+[Learn more](finderIntegration)
 
 <br/>
 
 
 
 ### Permissions
-SupaSidebar works seamlessly with macOS, requesting only the permissions required for features like global shortcuts, mouse triggers, browser access, and live tabs.  
+SupaSidebar works seamlessly with macOS, requesting only the permissions required for features like global shortcuts, mouse triggers, browser access, and live tabs.
 Clear permission steps ensure a smooth onboarding experience.
 
-***learn more on***  :  [Set Up](setUp)
-<br/>
-
-
+[Learn more](/installation)
