--- a/content/features/finderIntegration.mdx
+++ b/content/features/finderIntegration.mdx
@@ -16,19 +16,17 @@ Use the **⌘⌃S** and **⌘⌃C** are context-aware shortcuts that adapt autom
 3.  **Or add it by dragging**  :
 Simply drag the file, folder, or link and drop it directly into the sidebar. SupaSidebar will save it immediately.
 
-<br />
-<p align="center">
-  <img src="/assets/Folder getting save on sidebar.jpeg" alt="folder" width="800" />
-</p>
+
+![Folder getting saved on sidebar](/assets/Folder%20getting%20save%20on%20sidebar.jpeg)
 
 
 
-<p>
+<div>
   Watch this video:
   <a href="https://youtu.be/w5AMO-wkIgo" target="_blank">
    Finder
   </a>
-</p>
+</div>
 
 
 [learn more](smartShortcuts) - Complete guide to context-aware shortcuts across browsers and Finder
@@ -50,10 +48,8 @@ When you first use Finder shortcuts, macOS will prompt for permission. Click **O
 **Multiple Selection:**
 Select multiple files/folders → Press **⌘⌃S** → All added at once
 
-<br />
-<p align="center">
-  <img src="/assets/saved links.jpeg" alt="Saved File" width="800" />
-</p>
+
+![Saved Links](/assets/saved%20links.jpeg)
 
 **Notification Feedback:**
 SupaSidebar shows a notification confirming how many items were added:
@@ -121,10 +117,8 @@ Example structure:
   └── 📄 template.docx
 ```
 
-<br />
-<p align="center">
-  <img src="/assets/folder.jpeg" alt="folder" width="800" />
-</p>
+
+![Folder](/assets/folder.jpeg)
 
 ### Smart Folders for Files
 
