--- a/content/features/floatingButton.mdx
+++ b/content/features/floatingButton.mdx
@@ -4,10 +4,8 @@ A persistent, draggable button that floats above all windows for one-click sideb
 
 ## How It Works
 
-<br />
-<p align="center">
-  <img src="/assets/floating button.jpeg" alt="Floating Button" width="800" />
-</p>
+
+![Floating Button](/assets/floating%20button.jpeg)
 
 The Floating Button is a small, semi-transparent button that stays visible above all other windows. Click it once to toggle the sidebar - no keyboard needed.
 
@@ -24,12 +22,12 @@ The Floating Button is a small, semi-transparent button that stays visible above
 - Position persists across app restarts
 - Move to corners, edges, or anywhere you prefer
 - Works across multiple displays
-<p>
+<div>
   Watch this video:
   <a href="https://youtu.be/DgkGX2eQzq4" target="_blank">
 Floating Button Drag
   </a>
-</p>
+</div>
 
 
 ## Setup
@@ -39,10 +37,8 @@ Floating Button Drag
 1. Open **Preferences → General**
 2. Enable **Show floating button**
 3. Button appears immediately
-<br />
-<p align="center">
-  <img src="/assets/Floating Button Toggle.jpeg" alt="Floating Button Toggle" width="800" />
-</p>
+
+![Floating Button Toggle](/assets/Floating%20Button%20Toggle.jpeg)
 
 ### No Permissions Required
 
@@ -57,12 +53,12 @@ The floating button works without any special permissions - just toggle it on an
 - Sidebar visible → Click button → Sidebar hides
 
 Simple, predictable toggle behavior.
-<p>
+<div>
   Watch this video:
   <a href="https://youtu.be/DgkGX2eQzq4" target="_blank">
     Floating Button Open
   </a>
-</p>
+</div>
 
 
 ## Combining Access Methods
