--- a/content/features/globalShortcuts.mdx
+++ b/content/features/globalShortcuts.mdx
@@ -4,12 +4,12 @@ System-wide keyboard shortcuts for instant access to SupaSidebar from any applic
 
 ## How It Works
 
-<p>
+<div>
   Watch this video:
   <a href="https://youtu.be/UQdXah3G1R0" target="_blank">
     Shortcut Use
   </a>
-</p>
+</div>
 
 
 Global shortcuts work from anywhere on your Mac - whether you're in a browser, text editor, terminal, or design tool. Press the shortcut combination and SupaSidebar responds immediately.
@@ -18,10 +18,8 @@ Global shortcuts work from anywhere on your Mac - whether you're in a browser, t
 ## All Global Shortcuts
 
 ### Core Shortcuts  :
-<br />
-<p align="center">
-  <img src="/assets/Global Shortcuts.jpeg" alt="Global shortcut" width="800" />
-</p>
+
+![Global Shortcuts](/assets/Global%20Shortcuts.jpeg)
 
 | Shortcut | Action | Description |
 |----------|--------|-------------|
@@ -141,12 +139,12 @@ If a shortcut conflicts with another application:
 8. Repeat
 
 All without touching mouse.
-<p>
+<div>
   Watch this video:
   <a href="https://youtu.be/mbXoDgDRlvk" target="_blank">
     Workflow
   </a>
-</p>
+</div>
 
 
 ## Modifier Key Reference
