--- a/content/features/liveTabs.mdx
+++ b/content/features/liveTabs.mdx
@@ -11,12 +11,12 @@ Live Tabs continuously monitors your supported browsers and displays all open ta
 
 **Accessibility Observer** 
 Instant updates using macOS Accessibility API when tabs are created, switched, or closed - no polling delay.
-<p>
+<div>
   Watch this video:
   <a href="https://youtu.be/ia_F8vYHoUs" target="_blank">
     Live Tab
   </a>
-</p>
+</div>
 
 
 ## Multi-Browser Support
@@ -27,10 +27,8 @@ Live Tabs works across all supported browsers simultaneously:
 
 **In Development**:Firefox, Arc, Dia
 
-<br />
-<p align="center">
-  <img src="/assets/lifetabsmultiplebrowser.jpeg" alt="Life Tabs in Multiple Browsers" width="800" />
-</p>
+
+![Live Tabs in Multiple Browsers](/assets/lifetabsmultiplebrowser.jpeg)
 
 ### Browser Order Customization
 
@@ -49,10 +47,8 @@ Organize which browsers appear first in your live tabs list:
 3. Grant browser permissions when prompted
 
 
-<br />
-<p align="center">
-  <img src="/assets/Live Tabs Option.jpeg" alt="Life Tabs" width="800" />
-</p>
+
+![Live Tabs Option](/assets/Live%20Tabs%20Option.jpeg)
 
 
 ### Required Permissions
@@ -80,12 +76,12 @@ In the sidebar, live tabs appear in the **Recents** section (when Live Tabs mode
 2. Type tab title or URL
 3. Press **Return** to switch
 
-<p>
+<div>
   Watch this video:
   <a href="https://youtu.be/ia_F8vYHoUs" target="_blank">
   Live Tab Update
   </a>
-</p>
+</div>
 
 
 
