--- a/content/features/mouseTriggers.mdx
+++ b/content/features/mouseTriggers.mdx
@@ -4,12 +4,12 @@ Show the sidebar by simply moving your mouse to the edge of your screen - no cli
 
 ## How It Works
 
-<p>
+<div>
   Watch this video:
   <a href="https://youtu.be/8m36Q7ZFrVQ" target="_blank">
     Mouse Triggers
   </a>
-</p>
+</div>
 
 
 Mouse Triggers turn your screen edges into hot zones. Move your cursor to the configured edge, pause briefly, and the sidebar slides into view automatically.
@@ -19,10 +19,9 @@ Mouse Triggers turn your screen edges into hot zones. Move your cursor to the co
 Choose which screen edges trigger the sidebar:
  Hover near left/right side of screen
 
-When you move your cursor away, the sidebar can auto-hide or stay visible.<br />
-<p align="center">
-  <img src="/assets/mouse triggers.jpeg" alt="Mouse Triggers" width="800" />
-</p>
+When you move your cursor away, the sidebar can auto-hide or stay visible.
+
+![Mouse Triggers](/assets/mouse%20triggers.jpeg)
 
 ## Setup
 
@@ -33,10 +32,8 @@ When you move your cursor away, the sidebar can auto-hide or stay visible.<br />
 3. Select edge zones (left, right, or both)
 4. Adjust sensitivity settings (optional)
 
-<br />
-<p align="center">
-  <img src="/assets/mouse trigger settings panel.jpeg" alt="mouse trigger settings " width="800" />
-</p>
+
+![Mouse Trigger Settings](/assets/mouse%20trigger%20settings%20panel.jpeg)
 
 ### Required Permissions  :
 Browser integration requires Automation permissions and for Accessibility access for enhanced features,
@@ -46,11 +43,7 @@ Browser integration requires Automation permissions and for Accessibility access
 
 ## Customization
 
-<br />
-<p align="center">
-  <img src="/assets/mouse trigger settings panel.jpeg" alt="mouse trigger settings " width="800" />
-</p>
-
+![Mouse Trigger Settings](/assets/mouse%20trigger%20settings%20panel.jpeg)
 
 Control how close to the edge you need to move:
 
