--- a/content/features/pinnedItems.mdx
+++ b/content/features/pinnedItems.mdx
@@ -5,10 +5,8 @@ Lightning-fast access to your most important links with single-keystroke shortcu
 
 ## How It Works
 
-<br />
-<p align="center">
-  <img src="/Pinned Links.jpeg" alt="Pinned Links" width="800" />
-</p>
+
+![Pinned Links](/assets/Pinned%20Links.jpeg)
 
 Pinned items appear at the very top of your sidebar, marked with a pin icon. Assign keyboard shortcuts (⌘⌥1 through ⌘⌥9) to open your first 9 pinned items instantly from anywhere on your Mac.
 
