--- a/content/features/recentItems.mdx
+++ b/content/features/recentItems.mdx
@@ -4,10 +4,8 @@ Automatic tracking of your browsing history across all supported browsers - see 
 
 
 ## How It Works
-<br />
-<p align="center">
-  <img src="/assets/recent itmes.jpeg" alt="Recent History" width="800" />
-</p>
+
+![Recent Items](/assets/recent%20itmes.jpeg)
 
 
 Recent Items automatically monitors your browsers and tracks pages you visit. No manual saving required - just browse normally and SupaSidebar captures your history.
@@ -22,12 +20,12 @@ Real-time tracking using macOS Accessibility API - instant updates when you navi
 **Polling Mode** (All versions)
 Periodic checks every few seconds via AppleScript.
 
-<p>
+<div>
   Watch this video:
   <a href="https://youtu.be/H8gxuPMwseA" target="_blank">
     recent items
   </a>
-</p>
+</div>
 
 
 ### Multi-Browser Support
@@ -43,10 +41,8 @@ See [Browser Integration](browserIntegration) for complete list.
 1. Open **Preferences → Recents**
 2. Ensure mode is set to **Recent Items** (not Live Tabs)
 3. Configure display limit (default: 30 items)
-<br />
-<p align="center">
-  <img src="/assets/recent item option.jpeg" alt="select 'recent items' option.jpeg" width="800" />
-</p>
+
+![Recent Item Option](/assets/recent%20item%20option.jpeg)
 
 
 ### Required Permissions  :
@@ -72,12 +68,12 @@ Browser integration requires Automation permissions and for Accessibility access
 3. Recent items appear in search results
 4. Press **Return** to open
 
-<p>
+<div>
   Watch this video:
   <a href="https://youtu.be/g_8Dfq_RSWI" target="_blank">
    Recent History Command Panel
   </a>
-</p>
+</div>
 
 
 
