--- a/content/features/sidebar.mdx
+++ b/content/features/sidebar.mdx
@@ -4,10 +4,8 @@ A lightweight, always-accessible floating panel that gives you instant access to
 
 ## How It Works
 
-<br />
-<p align="center">
-  <img src="/assets/default position of sidebar.jpeg" alt="Default position of sidebar" width="800" />
-</p>
+
+![Default position of sidebar](/assets/default%20position%20of%20sidebar.jpeg)
 
 The Sidebar Panel is a floating window that sits on the edge of your screen, ready to appear with a single keystroke. It organizes all your saved content in an easy-to-navigate interface with folders, search, and quick actions.
 
@@ -21,12 +19,12 @@ The sidebar intelligently positions itself on whichever screen you're currently 
 - Toggle between sides instantly with a keyboard shortcut
 - Sidebar remembers your preference for each screen
 
-<p>
+<div>
   Watch this video:
   <a href="https://youtu.be/_P0FHN9yJpg" target="_blank">
     Sidebar toggle
   </a>
-</p>
+</div>
 
 
 
@@ -51,10 +49,8 @@ The sidebar works out of the box with default settings. To customize:
    - **Auto-hide on deactivate**: Hide sidebar when clicking outside
    - **Opacity on focus change**: Reduce opacity when not focused
    - **Sidebar side**: Choose left or right side (or use ⌘⌃L shortcut)
-<br />
-<p align="center">
-  <img src="/assets/default sidebar position.jpeg" alt="default sidebar position.jpeg" width="800" />
-</p>
+
+![Default sidebar position](/assets/default%20sidebar%20position.jpeg)
 
 ## Keyboard Shortcuts
 
