--- a/content/features/smartShortcuts.mdx
+++ b/content/features/smartShortcuts.mdx
@@ -4,12 +4,12 @@ Context-aware keyboard shortcuts that adapt based on your active application - s
 
 
 ## How It Works
-<p>
+<div>
   Watch this video:
   <a href="https://youtu.be/w5AMO-wkIgo" target="_blank">
  Smart Copy and Save
   </a>
-</p>
+</div>
 
 Smart Shortcuts detect which application is currently active and adapt their behavior automatically. No need to remember different shortcuts for different apps - **⌘⌃S** and **⌘⌃C** do the right thing based on context.
 
@@ -32,10 +32,8 @@ The magic of Smart Shortcuts is their intelligent context detection:
 
 ### In Browsers
 
-<br />
-<p align="center">
-  <img src="/assets/smart save.jpeg" alt="mouse triggers accessibility" width="800" />
-</p>
+
+![Smart Save](/assets/smart%20save.jpeg)
 
 Press **⌘⌃S** while browsing to instantly capture the current page:
 
@@ -70,10 +68,8 @@ See [Finder Integration](finderIntegration) for more details.
 ## Smart Copy (⌘⌃C)
 
 
-<br />
-<p align="center">
-  <img src="/smart copy.jpeg" alt="mouse triggers accessibility" width="800" />
-</p>
+
+![Smart Copy](/assets/smart%20copy.jpeg)
 
 ### In Browsers
 
