--- a/content/features/spaces.mdx
+++ b/content/features/spaces.mdx
@@ -6,10 +6,8 @@ Organize your digital life into separate workspaces - one for work, one for pers
 
 
 ## How It Works
-<br />
-<p align="center">
-  <img src="/assets/saved spaces.jpeg" alt="saved spaces" width="800" />
-</p>
+
+![Saved Spaces](/assets/saved%20spaces.jpeg)
 
 Each Space is an in dependent workspace containing its own set of:
 - Saved links and folders
@@ -36,10 +34,8 @@ Choose which space opens when you launch SupaSidebar:
 2. Select your preferred **Default startup space**
 3. SupaSidebar will always open to this space
 
-<br />
-<p align="center">
-  <img src="/assets/automation.jpeg" alt="default set up and new space" width="800" />
-</p>
+
+![Default setup and new space](/assets/automation.jpeg)
 
 ## Using Spaces
 
@@ -57,10 +53,8 @@ Each space has its own:
 - **Folders**: Create hierarchical organization
 - **Smart Folders**: Auto-organize with rules
 - **Pinned Items**: Quick-access favorites (shared across all spaces)
-<br />
-<p align="center">
-  <img src="/assets/space and folders.jpeg" alt="space and folders" width="800" />
-</p>
+
+![Space and folders](/assets/space%20and%20folders.jpeg)
 
 ## Advanced Features
 
