--- a/content/gettingStarted.mdx
+++ b/content/gettingStarted.mdx
@@ -6,11 +6,8 @@ Welcome to SupaSidebar - your personal productivity assistant designed to keep y
 
 Follow these steps to install SupaSidebar on macOS:
 
-## Image example
-<br />
-<p align="center">
-  <img src="/assets/website.png" alt="Blurred background window" width="800" />
-</p>
+
+![SupaSidebar Website](/assets/website.png)
 
 1. Visit the [official SupaSidebar website](https://www.supasidebar.com).  
 2. Click **Download** and wait for the installation file to finish downloading.  
@@ -48,7 +45,6 @@ SupaSidebar’s interface is designed for simplicity and speed. Here's a quick o
 
 > ⚡ **Pro Tip:** Use the global shortcut `CMD CTRL S` to save anything instantly from your browser or Finder — no need to drag and drop!
 
-*/}
 ---
 
 Now that you’re set up, let’s move on to exploring SupaSidebar’s powerful **Features** next 🚀
