--- a/content/installation.mdx
+++ b/content/installation.mdx
@@ -10,11 +10,9 @@ Browser integration requires **Automation permissions** and for **Accessibility 
 2. Find **SupaSidebar** in the list
 3. Enable checkboxes for all browsers you use
 
-<br />
-<p align="center">
-  <img src="/assets/automation real.jpeg" alt="Automation Permission" width="800" />
-</p>
-<br />
+
+![Automation Permission](/assets/automation%20real.jpeg)
+
 
 **First Time Setup:**
 When you first use browser shortcuts, macOS will prompt for permission for each browser. Click **OK** to grant access.
@@ -39,9 +37,7 @@ Some browsers benefit from Accessibility access for enhanced features:
 2. Find **SupaSidebar** in the list
 3. Enable the checkbox
 
-<br />
-<p align="center">
-  <img src="/assets/accessibility mouse triggers.jpeg" alt="Accessibility" width="800" />
-</p>
+
+![Accessibility](/assets/accessibility%20mouse%20triggers.jpeg)
 
 
